# multi-robot-fabrics

./: README.md  pyproject.toml  test_examples.py
docs/: installation.md  issues.md  tips.md
evaluation/: evaluate_horizon.py  evaluate_random_dynamic_scenarios.py  results_dynamic_scenarios  results_horizon
examples/: .gitignore  create_dinova_planner.py  create_panda_planner.py  example_dinovas_Jointspace.py  example_dinovas_Jointspace_cpp.py  example_pandas_Jointspace.py  example_pandas_Jointspace_2.py  example_pandas_Jointspace_cpp.py  example_pandas_Jointspace_python.py  example_pandas_cartesian.py  panda_panda_multifabrics.py  panda_panda_rolloutfabrics.py  parameters_manipulators.py  pointmasses_dynamic.py  pointmasses_static.py  test_examples.py
examples/configs/: dingo_kinova_config.yaml  panda_config.yaml
examples/evaluation/: evaluate_horizon.py  evaluate_random_dynamic_scenarios.py
examples/simulation_environments/: create_simulation_1manipulator.py  create_simulation_manipulators.py
examples/simulation_environments/urdfs/: kinova_gen_3_lite.urdf  pointRobot.urdf  pointRobot1.urdf
examples/simulation_environments/urdfs/table/: table.urdf  table_enlarged.urdf
examples/simulation_environments/urdfs/tray/: tray.urdf  tray_shallow.urdf
multi_robot_fabrics/fabrics_planner/: creating_planner.py  forward_planner_Cartesian.py  forward_planner_Jointspace.py
multi_robot_fabrics/utils/: plot_rollouts.py  utils.py  utils_apply_fk.py
multifabrics/fabrics_planner/: fabrics_planner.py  forward_planner_symbolic.py
multifabrics/others_planner/: deadlock_prevention.py  debugger_geometries.py  state_machine.py
multifabrics/utils/: generate_figures.py
