[tool.poetry]
name = "fabrics-multi-robot"
version = "0.1.0"
description = ""
authors = ["Saray Bakker <saraybakker@gmail.com>", "Luzia Knoedler <l.knoedler@tudelft.nl>", "Max Spahn <m.spahn@tudelft.nl>"]
maintainers = [
	"Saray Bakker <saraybakker@gmail.com>",
  	"Luzia Knoedler <l.knoedler@tudelft.nl>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.10"
matplotlib = "^3.7.1"
texttable = "^1.6.6"
latextable ="^1.0.0"
fabrics = "0.9.5"
urdfenvs = "^0.9.14"
forwardkinematics = "^1.2.3"
casadi = "<3.6"
seaborn = "^0.12.2"
pytest = "6.2.5"
pylint = "^2.17.5"
pytest-cov = "^4.1.0"
robotmodels = "^0.1.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

